# rust-desolator

./: Cargo.toml
httpie/: Cargo.toml
httpie/src/: main.rs
kv_server/: Cargo.toml  abi.proto
kv_server/examples/: client.rs  dummy_server.rs
kv_server/src/: error.rs  lib.rs
kv_server/src/pb/: mod.rs
kv_server/src/service/: command_service.rs  mod.rs
kv_server/src/storage/: memory.rs  mod.rs
queryer/: Cargo.toml
queryer/examples/: dialect.rs
scrape_url/: Cargo.toml
scrape_url/src/: main.rs
thumbor/: Cargo.toml  abi.proto
thumbor/src/: main.rs
thumbor/src/pb/: mod.rs
